# SafetyKnob

./: .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  DATA_STATUS.md  README.md  TODO.md  TODO_ko.md  config.example.json  config.json  demo.py  main.py  main_v2.py  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt  safetyknob.py  setup.py  test_all_data.py  test_all_folder.py  test_batch.py
docs/: AIHUB_DOWNLOAD_GUIDE.md  AIHUB_DOWNLOAD_GUIDE_ko.md  API_REFERENCE.md  API_REFERENCE_ko.md  DATASET_GUIDE.md  DATASET_GUIDE_ko.md  DATA_ANALYSIS.md  DATA_ANALYSIS_ko.md  DEVELOPMENT.md  DEVELOPMENT_ko.md  EXPERIMENT_PROTOCOL.md  EXPERIMENT_PROTOCOL_ko.md  PERFORMANCE_METRICS_ko.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_ko.md  RESEARCH_AUDIT.md  RESEARCH_AUDIT_ko.md  RESEARCH_METHODOLOGY.md  RESEARCH_METHODOLOGY_ko.md
examples/: api_client.py  batch_process.py
experiments/: train_baseline.py  train_binary.py  train_dann.py  train_dann_clean.py  train_finetune_lora.py  train_from_embeddings.py  train_hierarchical.py  train_multitask.py  train_standalone.py
scripts/: analyze_calibration.py  analyze_category_distribution.py  analyze_caution_predictions.py  analyze_errors.py  analyze_lora_ablation.py  analyze_lora_per_category.py  analyze_temporal_per_category.py  analyze_temporal_shift_cause.py  analyze_temporal_shift_visual.py  benchmark_v2.py  bootstrap_ci_analysis.py  compare_experiments.py  compare_models.py  create_scenario_split.py  create_split_exclude_caution.py  create_temporal_split.py  cross_domain_experiment.py  extract_embeddings.py  extract_resnet50_fast.py  fix_temporal_validation.py  generate_5d_labels.py  generate_final_figures.py  generate_paper_figures.py  generate_paper_figures_v2.py  label_shift_correction.py  optimize_data_storage.py  predict_caution.py  prepare_3class_data.py  prepare_dataset.py  prepare_simple_dataset.py  run_ensemble_ablation.py  run_ensemble_binary.py  run_ensemble_experiment.py  run_full_experiment.sh  run_multiseed.py  run_scaling_curve.py  statistical_tests.py  validate_data_integrity.py  validate_on_scenario_test.py  verify_dataset.py  (+3 more)
src/: __init__.py
src/analysis/: __init__.py  metrics.py  model_comparison.py  multi_model.py  single_model.py
src/api/: __init__.py  server.py
src/config/: __init__.py  paths.py  settings.py
src/core/: __init__.py  embedders.py  ensemble.py  neural_classifier.py  safety_assessment_system.py  safety_dimensions.py
src/legacy/api/: inference.py
src/utils/: __init__.py  cache_manager.py  data_loader.py  data_utils.py  logger.py  visualization.py  visualization_config.py
src_v2/: __init__.py
src_v2/api/: __init__.py  server_v2.py
src_v2/core/: __init__.py  embedders_v2.py  safety_assessment_system_v2.py
(+2 files in other folders)
